Google Play Policy Compliance: Complete branding update to JLS Suite, package name change to com.jls.suite, security fixes, and privacy policy updates

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace = "com.billbook.app"
+    namespace = "com.jls.suite"
     compileSdk = rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.billbook.app"
+        applicationId "com.jls.suite"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 4
